--- a/howto-video.html
+++ b/howto-video.html
@@ -106,7 +106,7 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
-		<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
 				'type': 'floating-chat',
@@ -114,6 +114,6 @@
 				'floating-chat.donateButton.background-color': '#fcbf47',
 				'floating-chat.donateButton.text-color': '#323842'
 			});
-		</script> -->
+		</script>
 	</body>
 </html>
