--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -46,17 +46,17 @@
 		<link href="./_app/immutable/assets/_layout-93601371.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-336878a9.js">
+		<link rel="modulepreload" href="./_app/immutable/start-0d5f8b15.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-d08f35a2.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-51006e9d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-2ccbea54.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-3d2d4ae9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-gjthpt_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-gjthpt_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -96,7 +96,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-864 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-928 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -157,14 +157,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="ulux5n">
-			import { start } from "./_app/immutable/start-336878a9.js";
+		<script type="module" data-sveltekit-hydrate="otd4qa">
+			import { start } from "./_app/immutable/start-0d5f8b15.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="ulux5n"]').parentNode,
-				version: "1675372808021",
+				target: document.querySelector('[data-sveltekit-hydrate="otd4qa"]').parentNode,
+				version: "1675603490515",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
