--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -46,20 +46,20 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-6964b58b.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-c72ec4f0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-f8826a69.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-2f4684f3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-3c2f2e47.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-be330808.js">
+		<link rel="modulepreload" href="./_app/immutable/start-f09bf153.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-986bc885.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ccc07371.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-ff3f3ea4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-fa581567.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-f9edb9bc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-12z4zbv_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-12z4zbv_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -107,28 +107,28 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-790 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-121 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
   <div class="pokemon-dropdown autocomplete-list hidden is-fullwidth svelte-75ckfb">
 
-      <div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/460.min.png');"></div>
-																		<span class="label"><!-- HTML_TAG_START -->Abomasnow<!-- HTML_TAG_END --></span>
-																		<div class="type type__symbol-autocomplete" data-type="Grass"></div>
-																		<div class="type type__symbol-autocomplete" data-type="Ice"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/594.min.png');"></div>
-																		<span class="label"><!-- HTML_TAG_START -->Alomomola<!-- HTML_TAG_END --></span>
+      <div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/658.min.png');"></div>
+																		<span class="label"><!-- HTML_TAG_START -->Greninja<!-- HTML_TAG_END --></span>
 																		<div class="type type__symbol-autocomplete" data-type="Water"></div>
-																		<div class="type type__symbol-autocomplete"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/334.min.png');"></div>
-																		<span class="label"><!-- HTML_TAG_START -->Altaria<!-- HTML_TAG_END --></span>
-																		<div class="type type__symbol-autocomplete" data-type="Dragon"></div>
+																		<div class="type type__symbol-autocomplete" data-type="Dark"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/6.min.png');"></div>
+																		<span class="label"><!-- HTML_TAG_START -->Charizard<!-- HTML_TAG_END --></span>
+																		<div class="type type__symbol-autocomplete" data-type="Fire"></div>
 																		<div class="type type__symbol-autocomplete" data-type="Flying"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/591.min.png');"></div>
-																		<span class="label"><!-- HTML_TAG_START -->Amoonguss<!-- HTML_TAG_END --></span>
-																		<div class="type type__symbol-autocomplete" data-type="Grass"></div>
-																		<div class="type type__symbol-autocomplete" data-type="Poison"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/25.min.png');"></div>
+																		<span class="label"><!-- HTML_TAG_START -->Pikachu<!-- HTML_TAG_END --></span>
+																		<div class="type type__symbol-autocomplete" data-type="Electric"></div>
+																		<div class="type type__symbol-autocomplete"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/26.min.png');"></div>
+																		<span class="label"><!-- HTML_TAG_START -->Raichu<!-- HTML_TAG_END --></span>
+																		<div class="type type__symbol-autocomplete" data-type="Electric"></div>
+																		<div class="type type__symbol-autocomplete"></div></div>
           </div>
 
       
@@ -170,14 +170,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1j0qqpu">
-			import { start } from "./_app/immutable/start-f8826a69.js";
+		<script type="module" data-sveltekit-hydrate="17bbqgq">
+			import { start } from "./_app/immutable/start-f09bf153.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1j0qqpu"]').parentNode,
-				version: "1676127567047",
+				target: document.querySelector('[data-sveltekit-hydrate="17bbqgq"]').parentNode,
+				version: "1676581881200",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
